--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="app_logo">App Logo</string>
     <string name="password">Password</string>
     <string name="event_title">Event Title</string>
+    <string name="upcoming_event">Upcoming Event: -</string>
+    <string name="recycler_description">List of your events</string>
 </resources>
